force-app/main/default/objects/numm__FAAccountListFA__c/numm__FAAccountListFA__c.object-meta.xml
<CustomObject>
    <description>Objet des schémas comptables liés aux immobilisations</description>
    <label>Schéma comptable</label>
    <nameField>
        <displayFormat>FAShe-{000000}</displayFormat>
        <label>Schéma comptable</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schémas comptables Immos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>