force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__Analytic10__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytic10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytique 10</label>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipName>FA_Sch_mas_comptables_Immos8</relationshipName>
    <type>Lookup</type>
</CustomField>