force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__DateOff__c.field-meta.xml
<CustomField>
    <fullName>numm__DateOff__c</fullName>
    <label>DateOff</label>
    <type>Date</type>
</CustomField>