force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__DateOn__c.field-meta.xml
<CustomField>
    <fullName>numm__DateOn__c</fullName>
    <label>DateOn</label>
    <type>Date</type>
</CustomField>