force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__DescriptionTransfer__c.field-meta.xml
<CustomField>
    <fullName>numm__DescriptionTransfer__c</fullName>
    <label>LibelleTransfert</label>
    <length>40</length>
    <type>Text</type>
</CustomField>