force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__FAItemAccount__c.field-meta.xml
<CustomField>
    <fullName>numm__FAItemAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FA Item Comptable</label>
    <referenceTo>numm__FAItemAccount__c</referenceTo>
    <relationshipLabel>Schémas comptables Immos</relationshipLabel>
    <relationshipName>FA_Sch_mas_comptables_Immos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>