force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__IdSchemaInit__c.field-meta.xml
<CustomField>
    <fullName>numm__IdSchemaInit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IdSchemaInit</label>
    <referenceTo>numm__FAAccountList__c</referenceTo>
    <relationshipName>FA_Schemas_comptables_Immos</relationshipName>
    <type>Lookup</type>
</CustomField>