force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__Tech_Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Entite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entité</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Schémas comptables Immos</relationshipLabel>
    <relationshipName>Schemas_comptables_Immos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>