force-app/main/default/objects/numm__FAAccountListFA__c/fields/numm__ThirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__ThirdParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tiers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__IdCtrlAccounting__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.numm__Tech_Entite__c</field>
            <operation>equals</operation>
            <valueField>numm__ThirdPartyRule__c.numm__Entite__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Schémas comptables Immos</relationshipLabel>
    <relationshipName>Sch_mas_comptables_Immos</relationshipName>
    <type>Lookup</type>
</CustomField>