force-app/main/default/objects/numm__FAAccountListFA__c/validationRules/numm__VerifTiers.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__VerifTiers</fullName>
    <active>true</active>
    <description>Vérification de la cohérence du tiers</description>
    <errorConditionFormula>If (ISBLANK (numm__ThirdParty__c),false,OR( numm__IdAccountingCode__r.numm__IdCtrlAccounting__c &lt;&gt; numm__ThirdParty__r.numm__IdctrlAccounting__c, numm__FA_Fixed_Asset__r.numm__Entity__c &lt;&gt; numm__ThirdParty__r.numm__Entite__c ))</errorConditionFormula>
    <errorDisplayField>numm__ThirdParty__c</errorDisplayField>
    <errorMessage>Tiers incorrecte.</errorMessage>
</ValidationRule>